--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port = 8083
 
+spring.data.cassandra.keyspace-name=cjavadatabase
+spring.data.cassandra.contact-points=localhost
+spring.data.cassandra.port=9042
+spring.data.cassandra.schema-action=create-if-not-exists
